--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 beautifulsoup4==4.12.3
+fasttext==0.9.2
+huggingface-hub==0.21.4
+numpy==1.26.4
+regex==2023.12.25
 requests==2.31.0
+tokenizers==0.15.2
+torch==2.2.1
+transformers==4.39.1
 urllib3==2.2.1
