--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 beautifulsoup4==4.12.3
 fasttext==0.9.2
 huggingface-hub==0.21.4
+keybert==0.8.4
 numpy==1.26.4
 regex==2023.12.25
 requests==2.31.0
+sentence-transformers==2.6.0
 tokenizers==0.15.2
 torch==2.2.1
 transformers==4.39.1
